# OpenGL

./: README.md
1-BoilerPlate/OpenGL_BoilerPlate/: CMakeLists.txt  myglwidget.cpp  myglwidget.h  widget.ui
1-BoilerPlate/build-OpenGL_BoilerPlate-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  OpenGL_BoilerPlate.ilk  build.ninja  cmake_install.cmake  rules.ninja
1-BoilerPlate/build-OpenGL_BoilerPlate-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-eb2d5012172f00456100.json  cmakeFiles-v1-62addbdf2c2645e86e3b.json  codemodel-v2-db5567f7340148cbdf6f.json  index-2020-10-12T22-05-37-0849.json  target-OpenGL_BoilerPlate-Debug-784cc641cfe745b481f6.json  target-OpenGL_BoilerPlate_autogen-Debug-dd747d85c362d9f35a71.json
1-BoilerPlate/build-OpenGL_BoilerPlate-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/OpenGL_BoilerPlate_autogen/: deps  mocs_compilation.cpp
1-BoilerPlate/build-OpenGL_BoilerPlate-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/OpenGL_BoilerPlate_autogen/EWIEGA46WW/: moc_myglwidget.cpp  moc_myglwidget.cpp.d  moc_widget.cpp  moc_widget.cpp.d
1-BoilerPlate/build-OpenGL_BoilerPlate-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/OpenGL_BoilerPlate_autogen/include/: ui_widget.h
2-OpenGLCourseAPP/OpenGLCourseAPP/: CMakeLists.txt  main.cpp  widget.h
2-OpenGLCourseAPP/build-OpenGLCourseAPP-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  glew.lib  rules.ninja
2-OpenGLCourseAPP/build-OpenGLCourseAPP-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-5aeae124e6e35b3e4525.json  cmakeFiles-v1-72dbecebb0cba4860b47.json  codemodel-v2-2647371afa03a23e5a14.json  index-2020-10-13T01-49-45-0056.json  target-OpenGLCourseAPP-Debug-e2a9adb0f598e22ab166.json  target-OpenGLCourseAPP_autogen-Debug-b3a02424cbe22d3e2d86.json
2-OpenGLCourseAPP/build-OpenGLCourseAPP-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/OpenGLCourseAPP_autogen/: deps
2-OpenGLCourseAPP/build-OpenGLCourseAPP-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/OpenGLCourseAPP_autogen/EWIEGA46WW/: moc_widget.cpp.d
2-OpenGLCourseAPP/build-OpenGLCourseAPP-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/glew_autogen/: deps
3-Console Application/ConsoleOpenGL/: CMakeLists.txt  main.cpp
3-Console Application/OpenGLConsoleApplication/: CMakeLists.txt  glfw3.lib  main.cpp
3-Console Application/build-ConsoleOpenGL-Desktop_x86_windows_msvc2019_pe_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  ConsoleOpenGL.cbp  ConsoleOpenGL.ilk  build.ninja  cmake_install.cmake  rules.ninja
3-Console Application/build-ConsoleOpenGL-Desktop_x86_windows_msvc2019_pe_32bit-Debug/.cmake/api/v1/reply/: cache-v2-ab33fe03dbb44113b2b9.json  cmakeFiles-v1-727433a0ccbc79c592b6.json  codemodel-v2-ebed475e035a32c25ce8.json  index-2020-10-13T08-43-44-0097.json  target-ConsoleOpenGL-Debug-6d6c166a908e665ffee7.json
3-Console Application/build-OpenGLConsoleApplication-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  OpenGLConsoleApplication.ilk  build.ninja  cmake_install.cmake  rules.ninja
3-Console Application/build-OpenGLConsoleApplication-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-696176c64dff131ea226.json  cmakeFiles-v1-66c5c13c5694079ad5a9.json  codemodel-v2-d741d07aafac34dbf784.json  index-2020-10-13T02-48-40-0862.json  target-OpenGLConsoleApplication-Debug-65396b5a08a17fd441c1.json
3-Console Application/build-OpenGLConsoleApplication-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
3-Console Application/build-OpenGLConsoleApplication-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-ca42ef4de42f7964f1c4.json  cmakeFiles-v1-cddfe9df343c9a1e91b6.json  codemodel-v2-f40a869e6d7970aa53d6.json  index-2020-10-13T08-48-24-0355.json  target-OpenGLConsoleApplication-Debug-cb46642fdeca751f20e5.json
3-Console Application/build-OpenGLConsoleApplication-Desktop_x86_windows_msvc2019_pe_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  OpenGLConsoleApplication.cbp  build.ninja  cmake_install.cmake  rules.ninja
3-Console Application/build-OpenGLConsoleApplication-Desktop_x86_windows_msvc2019_pe_32bit-Debug/.cmake/api/v1/reply/: cache-v2-197a0502c554f72f4dd2.json  cmakeFiles-v1-02b7e75331ef8a5978d9.json  codemodel-v2-84cb62fdd79d979de192.json  index-2020-10-14T19-18-54-0610.json  target-OpenGLConsoleApplication-Debug-7afabb3dcbe064070d84.json
Visual Studio/1-CourseAPP/OpenGLCourseApp/: OpenGLCourseApp.sln
Visual Studio/1-CourseAPP/OpenGLCourseApp/Debug/: OpenGLCourseApp.ilk
Visual Studio/1-CourseAPP/OpenGLCourseApp/OpenGLCourseApp/: OpenGLCourseApp.cpp  OpenGLCourseApp.vcxproj  OpenGLCourseApp.vcxproj.filters
Visual Studio/1-CourseAPP/OpenGLCourseApp/OpenGLCourseApp/Debug/: OpenGLCourseApp.exe.recipe  vc142.idb
Visual Studio/1-CourseAPP/OpenGLCourseApp/OpenGLCourseApp/Debug/OpenGLCourseApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLCourseApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
